# global_memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INDEX.md  PROJECT_STATE.md  README.md  SCHEMA.md  pyproject.toml
.cursor/: mcp.json
.tmp-batch-import/: _check_hypersanity_quotes.py  _check_lie_quotes.py  _check_plasma_quotes.py  _check_quotes.py  candidate-claim_robo_valuerl_chip_insertion_20260715.md  candidate-claim_wechat_datatang_factory_scale_20260716.md  candidate-claim_wechat_diffusion_rl_baseline_limits_20260716.md  candidate-claim_wechat_diogenes_cosmopolitan_20260715.md  candidate-claim_wechat_double_trace_traversable_20260715.md  candidate-claim_wechat_embodied_data_structure_not_volume_20260716.md  candidate-claim_wechat_embodied_data_three_waves_20260716.md  candidate-claim_wechat_embodiskill_skillevolver_fork_20260716.md  candidate-claim_wechat_er_epr_entanglement_20260715.md  candidate-claim_wechat_eval_vs_action_tradeoff_20260715.md  candidate-claim_wechat_expanding_hole_optic_flow_20260716.md  candidate-claim_wechat_expanding_hole_perceived_darkness_20260716.md  candidate-claim_wechat_expanding_hole_pupil_dilation_20260716.md  candidate-claim_wechat_expo_dual_policy_20260716.md  candidate-claim_wechat_g05_actioncodec_rvq_skeleton_20260716.md  candidate-claim_wechat_g05_flow_encoder_bottleneck_ki_20260716.md  candidate-claim_wechat_g05_vla_language_action_tension_20260716.md  candidate-claim_wechat_godel_numbering_method_20260716.md  candidate-claim_wechat_im_rl_baldassarre_distinction_20260716.md  candidate-claim_wechat_oh_la_la_box_20260715.md  (+72 more)
(+2203 files in other folders)
